--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit
-deepface==0.0.95
-opencv-python
-numpy
-Pillow
+deepface==0.0.79
+tensorflow-cpu==2.15.0
+keras==2.15.0
+opencv-python-headless
+pillow
 requests
+google-api-python-client
